crates/reap-pm-live/tests/ui/public_routes_are_internal.rs
use reap_pm_live::PmPublicRoutes;

fn substitute_route(routes: PmPublicRoutes) {
    let _ = routes;
}

fn main() {}
